--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@1999/scheduler",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Node.js library for periodical tasks",
   "config": {
     "access": "public"
@@ -28,11 +28,7 @@
   "bugs": {
     "url": "https://github.com/1999/scheduler/issues"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "homepage": "https://github.com/1999/scheduler#readme",
+  "homepage": "https://github.com/1999/scheduler",
   "dependencies": {
     "debug": "^3.1.0",
     "ts-node": "^3.3.0",
