--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
   "homepage": "https://github.com/1999/scheduler",
   "dependencies": {
     "debug": "^3.1.0",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.5.3",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^8.0.47",
-    "@types/sinon": "^2.3.7",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^8.9.5",
+    "@types/sinon": "^4.3.0",
     "@types/uuid": "^3.4.3",
-    "mocha": "^4.0.1",
-    "sinon": "^4.0.2",
-    "tslint": "^5.8.0"
+    "mocha": "^5.0.4",
+    "sinon": "^4.4.3",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2"
   }
 }
