--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/debug": "0.0.31",
+    "@types/debug": "^0.0.31",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.7",
-    "@types/sinon": "^5.0.1",
-    "@types/uuid": "^3.4.3",
+    "@types/node": "^10.12.1",
+    "@types/sinon": "^5.0.5",
+    "@types/uuid": "^3.4.4",
     "mocha": "^5.2.0",
-    "sinon": "^6.1.4",
-    "ts-node": "^7.0.0",
+    "sinon": "^7.1.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.1.4"
   }
 }
